# dfl-tp-workspace

./: Iterations.txt  README.md  README_TP1.md  quick_check.py
quickstart-pytorch/: Iterations.txt  analysis.py  final_model.pt  generate_data.py  make_pdf.py  pyproject.toml  test_data.py  test_model.py
quickstart-pytorch/archive/results/tp3_results/: fedavg_m_50_model_poison_a5.json
quickstart-pytorch/data/: client_0.pt  client_1.pt  client_10.pt  client_11.pt  client_12.pt  client_13.pt  client_14.pt  client_15.pt  client_16.pt  client_17.pt  client_18.pt  client_19.pt  client_2.pt  client_20.pt  client_21.pt  client_22.pt  client_23.pt  client_24.pt  client_25.pt  client_26.pt  client_27.pt  client_28.pt  client_29.pt  client_3.pt  client_30.pt  client_31.pt  client_32.pt  client_33.pt  client_34.pt  client_35.pt  client_36.pt  client_37.pt  client_38.pt  client_39.pt  client_4.pt  client_40.pt  client_41.pt  client_42.pt  client_43.pt  client_44.pt  (+10 more)
quickstart-pytorch/data_test/: client_0.pt  client_1.pt  client_2.pt
quickstart-pytorch/pytorchexample/: client_app.py  data.py  model.py  server_app.py
quickstart-pytorch/results/tp1_results/vary_algo/: baseline.json  default_config_alpha_0_01.json  default_config_alpha_100.json  fed_sgd_30.json  fedavg_adam_alpha_0_01.json  fedavg_adam_alpha_100.json  fedsgd_alpha_0_01.json  fedsgd_alpha_100.json
quickstart-pytorch/results/tp1_results/vary_alpha/: alpha_100_n20_l001.json  alpha_100_n50_l001.json  alpha_5_n20_l001.json  alpha_5_n50_l001.json  default_config_alpha_5.json
quickstart-pytorch/results/tp1_results/vary_alpha_epoch/: fedavg_alpha100_ep5.json
quickstart-pytorch/results/tp1_results/vary_client/: default_config_n_20.json  default_config_n_5.json
quickstart-pytorch/results/tp1_results/vary_clients/: alpha_0_1_n50_l001.json  alpha_0_1_n5_l001.json
quickstart-pytorch/results/tp1_results/vary_epoch/: fedavg_epoch1_alpha_01.json  fedavg_epoch_1.json  fedavg_epoch_1_alpha_0_01.json  fedavg_epoch_5.json  fedavg_epoch_5_alpha_0_01.json  (+1 more)
quickstart-pytorch/results/tp2_results/: baseline_alpha_0_01.json  baseline_alpha_1.json  baseline_alpha_100.json  fedprox_alpha_0_01.json  fedprox_alpha_1.json  fedprox_alpha_100.json  scaffold_alpha_0_01.json  scaffold_alpha_1.json  scaffold_alpha_100.json
quickstart-pytorch/results/vary_algo/: fed_sgd_10.json
quickstart-pytorch/results/vary_alpha/: alpha_0_1_n50_l001.json
quickstart-pytorch/results/vary_epoch/: fedprox_epoch4_alpha_01.json  scaffold_epoch1_alpha_01.json  scaffold_epoch4_alpha_01.json
quickstart-pytorch/results/vary_ftrain/: alpha_0_1_n20_f05.json
(+77 files in other folders)
