[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.1.1"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"
num-supernodes = 10

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-train = 1
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.01
batch-size = 64
num-clients = 50
alpha-dirichlet = 100
data-dir = "./data"
seed = 42
client-optimizer = "sgd" # "sgd" or "adam"
client-algorithm = "fedavg" ## "fedavg" or "fedsgd" or "scaffold"
fedprox-mu = 0
malicious-ratio = 0
attack-type = "data"  ## "data" or "model"
strategy = "fedavg" ## "fedavg", "fedmedian", or "krum"
krum-f = 0  # malicious clients
output-dir = "./results/"