[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.1.1"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"
num-supernodes = 10

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
## TP1 Parameters
num-server-rounds = 20
fraction-train = 1
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.01
batch-size = 64
num-clients = 20
alpha-dirichlet = 0.01
data-dir = "./data"
seed = 42

## TP2 Parameters
client-optimizer = "sgd" # "sgd" or "adam"
client-algorithm = "fedavg" ## "fedavg" or "fedsgd" or "scaffold"
fedprox-mu = 0

## TP3 Parameters
malicious-ratio = 0 # 0 = no attack
attack-type = "model"  ## "data" or "model"
strategy = "fedavg" ## "fedavg", "fedmedian", or "krum"
krum-f = 0  # num malicious clients
output-dir = "./results/tp1_results/vary_epoch" ## Output directory